tiny word change in caption

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -196,7 +196,7 @@ drifts\cite{Cottrell1993,Fulop1998}. Qualitatively, Fig. \ref{fig:2D_F12_physica
     % \centering
     \raggedleft
 \includegraphics[scale=0.9]{fig3.pdf}
-    \caption{(colour online) The imaginary component of the frequencies for the case with parallel drift, $u_{\parallel} = -0.64 u_0 \simeq -1.085 V_A$. Panel (a) plots the growth rate against frequency where shading indicates the wave's parallel wavenumber in units of $\Omega_i/V_A$, and (b) plots the solutions in the $k_\parallel, \omega$ plane where shading indicates growth rate. Note that the Doppler shift associated with the non-zero parallel drift speed broadens the unstable peaks in frequency. The 10th cyclotron harmonic is split into a doublet, or has two peaks because both the growth rate and real frequency vary with wavenumber. Compare with Fig. 2 of Cottrel et al 1993.}
+    \caption{(colour online) The imaginary component of the frequencies for the case with parallel drift, $u_{\parallel} = -0.64 u_0 \simeq -1.085 V_A$. Panel (a) plots growth rate against frequency where shading indicates parallel wavenumber in units of $\Omega_i/V_A$, and (b) plots the solutions in the $k_\parallel, \omega$ plane where shading indicates growth rate. Note that the Doppler shift associated with the non-zero parallel drift speed broadens the unstable peaks in frequency. The 10th cyclotron harmonic is split into a doublet, or has two peaks because both the growth rate and real frequency vary with wavenumber. Compare with Fig. 2 of Cottrel et al 1993.}
     \label{fig:2D_F12_physicalpitch}
 \end{figure}
 
