tiny word change in caption

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -145,7 +145,7 @@ The growth rates of unstable modes for the case where the pitch-angle cosine
 value is zero ($u_\parallel = 0$ in Eq. 1) are plotted in Fig.
 \ref{fig:2D_F12_zeropitch}(a) against the associated real frequency (only modes
 with growth rates in excess of the solver tolerance are shown i.e. $\Im(\omega)
-> 10^{-5} \Omega_i$). In this panel shading indicates the parallel wavenumber in
+> 10^{-5} \Omega_i$). In this panel shading indicates parallel wavenumber in
 units of $\Omega_i/V_A$. Fig. \ref{fig:2D_F12_zeropitch}(b) plots the same data in the $(k_\parallel,\omega)$ plane where shading instead indicates growth rates. The simplicity of the consecutive unstable cyclotron harmonics visible in panel (a) betrays the complexity of the structure in the $(k_\parallel, \omega)$ plane. Integration over $k_\parallel$ projects the solutions onto the frequency axis, which loses the structure and produces narrow harmonics. Fig. \ref{fig:2D_imag_zeropitch} plots shows the same data as Fig. \ref{fig:2D_F12_zeropitch} with damped and normal modes in addition, except shading indicates the growth rates in $(k_\parallel, k_\perp)$ space. Overlaid contours indicate the real frequency in units of ion cyclotron harmonics. Only narrow regions around the cyclotron harmonics are unstable. Overlaid straight traces indicate propagation angle. No Doppler shift is present due to the lack of parallel drift in the alpha-particle ring-beam. The growth rate increases approximately linearly with cyclotron harmonic number, which is consistent with the literature\cite{Dendy1994}. Together these figures serves to introduce a 2D view (growth rates in $(k_\parallel, k_\perp)$ space) of traditionally 1D data (growth rates against frequency). This will become important when a non-zero $u_\parallel$ is taken into account next.
 
 \begin{figure}[ht!]
